--- a/ebooks/simul-xgb.qmd
+++ b/ebooks/simul-xgb.qmd
@@ -25,10 +25,10 @@ colour_samples <- c(
 )
 
 colour_recalib <- c(
-  "None" = "#88CCEE",
-  "Platt" = "#44AA99",
-  "Isotonic" = "#882255",
-  "Beta" = "darkgoldenrod",
+  "None" = "#56B4E9",
+  "Platt" = "#009E73",
+  "Isotonic" = "#CC79A7",
+  "Beta" = "#D55E00",
   "Locfit" = "firebrick3"
 )
 ```
@@ -1035,8 +1035,8 @@ stopCluster(cl)
 
 The results can be loaded as follows:
 
-```{r load-resul_xgb, eval=FALSE}
-scenarios <- 13
+```{r load-resul_xgb, eval=TRUE}
+scenarios <- 1:16
 files <- str_c(
   "../output/simul/resul_xgb_scenario_", scenarios, ".rda"
 )
@@ -1056,7 +1056,7 @@ The `resul_rf` object is of length 16: each element contains the simulations for
 We can now extract some information from the results.
 
 We first aggregate all the computed metrics performance/calibration/divergence in a single tibble, `metrics_xgb_all`.
-```{r, eval=FALSE}
+```{r, eval=TRUE}
 #| code-fold: true
 #| code-summary: Codes to create the metrics table
 metrics_xgb_all <- map(
@@ -1072,8 +1072,8 @@ metrics_xgb_all <- map(
     ),
     recalib = factor(
       recalib,
-      levels = c("none", "platt", "isotonic", "beta", "locfit"),
-      labels = c("None", "Platt", "Isotonic", "Beta", "Locfit")
+      levels = c("none", "platt", "beta", "isotonic", "locfit"),
+      labels = c("None", "Platt", "Beta", "Isotonic", "Locfit")
     )
   )
 
@@ -1087,7 +1087,7 @@ metrics_xgb_all <- map(
 save(metrics_xgb_all, file = "../output/simul/metrics_xgb_all.rda")
 ```
 
-```{r load-metrics_xgb_all.rda, echo=FALSE}
+```{r load-metrics_xgb_all.rda, echo=FALSE,eval=FALSE}
 load("../output/simul/metrics_xgb_all.rda")
 ```
 
@@ -1137,16 +1137,16 @@ highest_auc_xgb <-
   mutate(result_type = "largest_auc") |>
   ungroup()
 
-# Identify tree with lowest MSE
-lowest_mse_xgb <-
-  metrics_xgb_all |>
-  filter(sample == "Validation", recalib == "None") |>
-  group_by(scenario, repn) |>
-  arrange(mse) |>
-  slice_head(n = 1) |>
-  select(scenario, repn, ind, nb_iter, recalib) |>
-  mutate(result_type = "lowest_mse") |>
-  ungroup()
+# # Identify tree with lowest MSE
+# lowest_mse_xgb <-
+#   metrics_xgb_all |>
+#   filter(sample == "Validation", recalib == "None") |>
+#   group_by(scenario, repn) |>
+#   arrange(mse) |>
+#   slice_head(n = 1) |>
+#   select(scenario, repn, ind, nb_iter, recalib) |>
+#   mutate(result_type = "lowest_mse") |>
+#   ungroup()
 
 # Identify tree with lowest brier
 lowest_brier_xgb <-
@@ -1206,14 +1206,14 @@ models_of_interest_xgb <-
   smallest_xgb |>
   bind_rows(largest_xgb) |>
   bind_rows(highest_auc_xgb) |>
-  bind_rows(lowest_mse_xgb) |>
+  # bind_rows(lowest_mse_xgb) |>
   bind_rows(lowest_brier_xgb) |>
   bind_rows(lowest_ici_xgb) |>
   bind_rows(lowest_kl_xgb) |> 
   bind_rows(mediocre_ici_xgb)
 
 models_of_interest_metrics <- NULL
-for (recalibration_method in c("None", "Platt", "Isotonic")) {
+for (recalibration_method in c("None", "Platt", "Beta", "Isotonic")) {
   # Add metrics now
   models_of_interest_metrics <-
     models_of_interest_metrics |>
@@ -1238,10 +1238,13 @@ models_of_interest_metrics <-
     result_type = factor(
       result_type,
       levels = c(
-        "smallest", "largest", "lowest_mse", "largest_auc",
+        "smallest", "largest", #"lowest_mse", 
+        "largest_auc",
         "lowest_brier", "lowest_ici", "lowest_kl", "high_ici"),
       labels = c(
-        "Smallest", "Largest", "MSE*", "AUC*",
+        "Smallest", "Largest", 
+        #"MSE*", 
+        "AUC*",
         "Brier*", "ICI*", "KL*", "High ICI"
       )
     )
@@ -1261,7 +1264,7 @@ TBD
 
 Let us extract all the histogram information computed over the simulations and put that in a single object, `scores_hist_all`.
 
-```{r define-scores_hist_all, eval=FALSE}
+```{r define-scores_hist_all, eval=TRUE}
 scores_hist_all <-
   map(
     resul_xgb,
@@ -1273,7 +1276,7 @@ scores_hist_all <-
 save(scores_hist_all, file = "../output/simul/scores_hist_all.rda")
 ```
 
-```{r load-scores_hist_all, echo=FALSE}
+```{r load-scores_hist_all, echo=FALSE, eval=FALSE}
 load("../output/simul/scores_hist_all.rda")
 ```
 
@@ -1290,13 +1293,13 @@ plot_bp_interest <- function(metrics_interest,
                              recalib_method) {
   subtitle <- str_c(
     "Depth = ", metrics_interest$max_depth, ", ",
-    "MSE = ", round(metrics_interest$mse, 2), ", ",
+    # "MSE = ", round(metrics_interest$mse, 2), ", ",
     "AUC = ", round(metrics_interest$AUC, 2), ", \n",
     "Brier = ", round(metrics_interest$brier, 2), ",",
     "ICI = ", round(metrics_interest$ici, 2), ", ",
     "KL = ", round(metrics_interest$KL_20_true_probas, 2)
   )
-
+  
   if (recalib_method == "none") {
     plot(
       main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
@@ -1311,6 +1314,14 @@ plot_bp_interest <- function(metrics_interest,
       xlab = latex2exp::TeX("$\\hat{s}(x)$"),
       ylab = "",
       col = colour_recalib[["Platt"]]
+    )
+  } else if (recalib_method == "beta") {
+    plot(
+      main = str_c(label, " (iter = ", metrics_interest$nb_iter,")"),
+      scores_hist_interest$test_c_beta,
+      xlab = latex2exp::TeX("$\\hat{s}(x)$"),
+      ylab = "",
+      col = colour_recalib[["Beta"]]
     )
   } else if (recalib_method == "iso") {
     plot(
@@ -1344,10 +1355,10 @@ plot_bp_xgb <- function(scenario,
   )
   true_prob <- simu_data$data$probs_train
   
-  for (recalib_method in c("none", "platt", "iso")) {
+  for (recalib_method in c("none", "platt", "beta", "iso")) {
     
-    i_method <- match(recalib_method, c("none", "platt", "iso"))
-    recalib_method_lab <- c("None", "Platt", "Isotonic")[i_method]
+    i_method <- match(recalib_method, c("none", "platt", "beta", "iso"))
+    recalib_method_lab <- c("None", "Platt", "Beta", "Isotonic")[i_method]
     
     # The metrics for the corresponding simulations, on the validation set
     metrics_xgb_current_valid <-
@@ -1410,28 +1421,28 @@ plot_bp_xgb <- function(scenario,
         recalib_method = recalib_method
       )
       
-      ## Iteration with min MSE on validation set
-      metrics_valid_mse_star <- metrics_xgb_current_valid |> arrange(mse) |>
-        dplyr::slice(1)
-      nb_iter_mse <- metrics_valid_mse_star$nb_iter
-      max_depth_mse_star <- metrics_valid_mse_star$max_depth
-      i_max_depth_mse_star <- which(max_depth_val == max_depth_mse_star)
-      # Metrics at the same iteration on the test set
-      metrics_min_mse <-
-        metrics_xgb_current_test |>
-        filter(
-          nb_iter == !!nb_iter_mse,
-          max_depth == max_depth_mse_star
-        )
-      # Note: indexing at 0 here...
-      ind_mse <- which(map_dbl(scores_hist_repn[[i_max_depth_mse_star]], "nb_iter") == nb_iter_mse)
-      scores_hist_min_mse <- scores_hist_repn[[i_max_depth_mse_star]][[ind_mse]]
-      plot_bp_interest(
-        metrics_interest = metrics_min_mse,
-        scores_hist_interest = scores_hist_min_mse,
-        label = "MSE*",
-        recalib_method = recalib_method
-      )
+      #   ## Iteration with min MSE on validation set
+      #   metrics_valid_mse_star <- metrics_xgb_current_valid |> arrange(mse) |>
+      #     dplyr::slice(1)
+      #   nb_iter_mse <- metrics_valid_mse_star$nb_iter
+      #   max_depth_mse_star <- metrics_valid_mse_star$max_depth
+      #   i_max_depth_mse_star <- which(max_depth_val == max_depth_mse_star)
+      #   # Metrics at the same iteration on the test set
+      #   metrics_min_mse <-
+      #     metrics_xgb_current_test |>
+      #     filter(
+      #       nb_iter == !!nb_iter_mse,
+      #       max_depth == max_depth_mse_star
+      #     )
+      #   # Note: indexing at 0 here...
+      #   ind_mse <- which(map_dbl(scores_hist_repn[[i_max_depth_mse_star]], "nb_iter") == nb_iter_mse)
+      #   scores_hist_min_mse <- scores_hist_repn[[i_max_depth_mse_star]][[ind_mse]]
+      #   plot_bp_interest(
+      #     metrics_interest = metrics_min_mse,
+      #     scores_hist_interest = scores_hist_min_mse,
+      #     label = "MSE*",
+      #     recalib_method = recalib_method
+      #   )
     }
     ## Iteration with max AUC on validation set
     metrics_valid_auc_star <-
@@ -1549,9 +1560,9 @@ plot_bp_xgb <- function(scenario,
 #| fig-cap: Distribution of scores on the test set (DGP 1, 0 noise variable)
 #| label: fig-xgb-bp-1-0
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 1, repn = 1)
 ```
 ##### 10 noise variables
@@ -1559,9 +1570,9 @@ plot_bp_xgb(scenario = 1, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 1, 10 noise variables)
 #| label: fig-xgb-bp-1-10
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 2, repn = 1)
 ```
 ##### 50 noise variables
@@ -1569,9 +1580,9 @@ plot_bp_xgb(scenario = 2, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 1, 50 noise variables)
 #| label: fig-xgb-bp-1-50
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 3, repn = 1)
 ```
 ##### 100 noise variables
@@ -1579,9 +1590,9 @@ plot_bp_xgb(scenario = 3, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 1, 100 noise variables)
 #| label: fig-xgb-bp-1-100
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 4, repn = 1)
 ```
 ::::
@@ -1592,9 +1603,9 @@ plot_bp_xgb(scenario = 4, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 2, 0 noise variable)
 #| label: fig-xgb-bp-2-0
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 5, repn = 1)
 ```
 ##### 10 noise variables
@@ -1602,9 +1613,9 @@ plot_bp_xgb(scenario = 5, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 2, 10 noise variables)
 #| label: fig-xgb-bp-2-10
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 6, repn = 1)
 ```
 ##### 50 noise variables
@@ -1612,9 +1623,9 @@ plot_bp_xgb(scenario = 6, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 2, 50 noise variables)
 #| label: fig-xgb-bp-2-50
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 7, repn = 1)
 ```
 ##### 100 noise variables
@@ -1622,9 +1633,9 @@ plot_bp_xgb(scenario = 7, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 2, 100 noise variables)
 #| label: fig-xgb-bp-2-100
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 8, repn = 1)
 ```
 ::::
@@ -1635,9 +1646,9 @@ plot_bp_xgb(scenario = 8, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 3, 0 noise variable)
 #| label: fig-xgb-bp-3-0
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 9, repn = 1)
 ```
 ##### 10 noise variables
@@ -1645,9 +1656,9 @@ plot_bp_xgb(scenario = 9, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 3, 10 noise variables)
 #| label: fig-xgb-bp-3-10
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 10, repn = 1)
 ```
 ##### 50 noise variables
@@ -1655,9 +1666,9 @@ plot_bp_xgb(scenario = 10, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 3, 50 noise variables)
 #| label: fig-xgb-bp-3-50
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 11, repn = 1)
 ```
 ##### 100 noise variables
@@ -1665,9 +1676,9 @@ plot_bp_xgb(scenario = 11, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 3, 100 noise variables)
 #| label: fig-xgb-bp-3-100
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 12, repn = 1)
 ```
 ::::
@@ -1678,9 +1689,9 @@ plot_bp_xgb(scenario = 12, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 4, 0 noise variable)
 #| label: fig-xgb-bp-4-0
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 13, repn = 1)
 ```
 ##### 10 noise variables
@@ -1688,9 +1699,9 @@ plot_bp_xgb(scenario = 13, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 4, 10 noise variables)
 #| label: fig-xgb-bp-4-10
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 14, repn = 1)
 ```
 ##### 50 noise variables
@@ -1698,9 +1709,9 @@ plot_bp_xgb(scenario = 14, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 4, 50 noise variables)
 #| label: fig-xgb-bp-4-50
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 15, repn = 1)
 ```
 ##### 100 noise variables
@@ -1708,9 +1719,9 @@ plot_bp_xgb(scenario = 15, repn = 1)
 #| fig-cap: Distribution of scores on the test set (DGP 4, 100 noise variables)
 #| label: fig-xgb-bp-4-100
 #| code-fold: true
-#| fig-height: 6
+#| fig-height: 7
 #| fig-width: 14
-par(mfrow = c(3,9), mar = c(4.1, 4, 3.5, 1.5))
+par(mfrow = c(4,8), mar = c(4.1, 4, 3.5, 1.5))
 plot_bp_xgb(scenario = 16, repn = 1)
 ```
 ::::
@@ -1725,9 +1736,9 @@ if(!dir.exists("../figs/")) dir.create("../figs/")
 for (scenario in 1:16) {
   pdf(
     file = str_c("../figs/bp_synthetic_xbg_", scenario, ".pdf"),
-    height = 4.5, width = 10
+    height = 6.5, width = 10
   )
-  par(mfrow = c(3,5), mar = c(4.1, 4, 3.5, 1.5))
+  par(mfrow = c(4,5), mar = c(4.1, 4, 3.5, 1.5))
   plot_bp_xgb(scenario = scenario, repn = 1, paper_version = TRUE)
   dev.off()
 }
@@ -1958,11 +1969,11 @@ table_models_interest_mean |>
   select(-mean, -sd, -sample) |> 
   pivot_wider(names_from = c(recalib, name), values_from = value) |> 
   knitr::kable(
-    align = str_c("cl", str_c(rep("c", 3*3), collapse = ""), collapse = ""),
+    align = str_c("cl", str_c(rep("c", 3*4), collapse = ""), collapse = ""),
     escape = FALSE, booktabs = T, digits = 3, format = "markdown",
     col.names = c(
       "DGP", "Noise", "Optim.",
-      rep(c("BS", "ICI", "KL"), 3)
+      rep(c("BS", "ICI", "KL"), 4)
     )
   ) |> 
   kableExtra::collapse_rows(columns = 1:2, valign = "top") |> 
@@ -1970,6 +1981,7 @@ table_models_interest_mean |>
     c(" " = 3,
       "None" = 3,
       "Platt" = 3,
+      "Beta" = 3,
       "Isotonic" = 3
     )
   ) |> 
@@ -2016,11 +2028,11 @@ table_models_interest_mean |>
   select(-mean, -sd, -sample) |> 
   pivot_wider(names_from = c(recalib, name), values_from = value) |> 
   knitr::kable(
-    align = str_c("cl", str_c(rep("c", 3*3), collapse = ""), collapse = ""),
+    align = str_c("cl", str_c(rep("c", 3*4), collapse = ""), collapse = ""),
     escape = FALSE, booktabs = T, digits = 3, format = "latex",
     col.names = c(
       "DGP", "Noise", "Optim.",
-      rep(c("BS", "ICI", "KL"), 3)
+      rep(c("BS", "ICI", "KL"), 4)
     )
   ) |> 
   kableExtra::collapse_rows(columns = 1:2, valign = "top") |> 
@@ -2028,6 +2040,7 @@ table_models_interest_mean |>
     c(" " = 3,
       "None" = 3,
       "Platt" = 3,
+      "Beta" = 3,
       "Isotonic" = 3
     )
   )
@@ -2059,7 +2072,7 @@ points_after_c <- initial_points |>
   select(dgp, no_noise, result_type, ici, kl) |> 
   left_join(
     table_models_interest_mean |> 
-      filter(recalib %in% c("Platt", "Isotonic")) |> 
+      filter(recalib %in% c("Platt", "Beta", "Isotonic")) |> 
       select(dgp, no_noise, recalib, result_type, ici, kl) |> 
       rename(ici_end = ici, kl_end = kl),
     relationship = "many-to-many" # (Platt and Isotonic)
@@ -2080,7 +2093,10 @@ p_kl_vs_ici_recalib <-
     ),
     arrow = arrow(length=unit(.2, 'cm'))
   ) +
-  facet_grid(dgp~no_noise, scales = "free") +
+  # facet_grid(dgp~no_noise, scales = "free") +
+  ggh4x::facet_grid2(
+    dgp~no_noise, independent = "none", scales = "free_y", axes = "all"
+  ) +
   scale_shape_manual(
     NULL,
     values = c(
@@ -2118,7 +2134,10 @@ p_kl_vs_ici_recalib_dgp_1 <-
     ),
     arrow = arrow(length=unit(.2, 'cm'))
   ) +
-  facet_grid(dgp~no_noise, scales = "free") +
+  # facet_grid(dgp~no_noise, scales = "free") +
+  ggh4x::facet_grid2(
+    dgp~no_noise, axes = "all", independent = "none", scales = "free_y"
+  ) +
   scale_shape_manual(
     NULL,
     values = c(
